--- a/src/assets/layers/behaviours.scss
+++ b/src/assets/layers/behaviours.scss
@@ -4,7 +4,7 @@
     flex: 1;
     grid-template-columns: min-content auto;
     grid-template-rows: min-content 1fr;
-    min-height: 100lvh;
+    height: 100lvh;
 
     &__sidebar,
     &__header {
@@ -27,6 +27,7 @@
       display: flex;
       grid-area: 2 / 2 / 3 / 3;
       height: 100%;
+      justify-content: center;
       overflow: hidden;
     }
   }
