--- a/src/assets/layers/default.scss
+++ b/src/assets/layers/default.scss
@@ -29,6 +29,6 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    min-height: 100%;
+    height: 100%;
   }
 }
